Harmonize IdleActionWarningDialog

As per crbug.com/788019 Comments 1,5,7:
- Width = 448px
- Remove X (Close) button from upper right
- Update title and body strings
- Code cleanup
- NOTE: Dialog has no buttons, is dismissed by any user action

Bug: 788019
Test: Sit idle in Public Session (?), see if the Great Harmony will
come and find you

Change-Id: I160e93eb0fc9a788ef1c627b5459ca1e1d6c04de
Reviewed-on: https://chromium-review.googlesource.com/1070713
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Greg Levin <glevin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561562}
Former-commit-id: 56f9fa8ccb417eb385215ac23dcca4c8a6ecec3d