chrome/browser/chromeos/power/idle_action_warning_dialog_view.cc
@@ -27,49 +27,23 @@ namespace chromeos {
 
 namespace {
 
-const int kIdleActionWarningContentWidth = 300;
-
 const int kCountdownUpdateIntervalMs = 1000;  // 1 second.
-
-class FixedWidthLabel : public views::Label {
- public:
-  explicit FixedWidthLabel(int width);
-  ~FixedWidthLabel() override;
-
-  gfx::Size CalculatePreferredSize() const override;
-
- private:
-  int width_;
-
-  DISALLOW_COPY_AND_ASSIGN(FixedWidthLabel);
-};
-
-FixedWidthLabel::FixedWidthLabel(int width) : width_(width) {
-  SetHorizontalAlignment(gfx::ALIGN_LEFT);
-  SetMultiLine(true);
-}
-
-FixedWidthLabel::~FixedWidthLabel() {
-}
-
-gfx::Size FixedWidthLabel::CalculatePreferredSize() const {
-  return gfx::Size(width_, GetHeightForWidth(width_));
-}
 
 }  // namespace
 
 IdleActionWarningDialogView::IdleActionWarningDialogView(
     base::TimeTicks idle_action_time)
-    : idle_action_time_(idle_action_time),
-      label_(NULL) {
-  label_ = new FixedWidthLabel(kIdleActionWarningContentWidth);
-  label_->SetBorder(views::CreateEmptyBorder(
+    : idle_action_time_(idle_action_time) {
+  SetBorder(views::CreateEmptyBorder(
       ChromeLayoutProvider::Get()->GetDialogInsetsForContentType(views::TEXT,
                                                                  views::TEXT)));
-  AddChildView(label_);
   SetLayoutManager(std::make_unique<views::FillLayout>());
 
-  UpdateLabel();
+  views::Label* label = new views::Label(
+      l10n_util::GetStringUTF16(IDS_IDLE_WARNING_LOGOUT_WARNING));
+  label->SetMultiLine(true);
+  label->SetHorizontalAlignment(gfx::ALIGN_LEFT);
+  AddChildView(label);
 
   // Shown on the root window for new windows.
   views::DialogDelegate::CreateDialogWidget(this, nullptr /* context */,
@@ -77,10 +51,8 @@ IdleActionWarningDialogView::IdleActionWarningDialogView(
       ->Show();
 
   update_timer_.Start(
-      FROM_HERE,
-      base::TimeDelta::FromMilliseconds(kCountdownUpdateIntervalMs),
-      this,
-      &IdleActionWarningDialogView::UpdateLabel);
+      FROM_HERE, base::TimeDelta::FromMilliseconds(kCountdownUpdateIntervalMs),
+      this, &IdleActionWarningDialogView::UpdateTitle);
   chrome::RecordDialogCreation(chrome::DialogIdentifier::IDLE_ACTION_WARNING);
 }
 
@@ -91,7 +63,7 @@ void IdleActionWarningDialogView::CloseDialog() {
 
 void IdleActionWarningDialogView::Update(base::TimeTicks idle_action_time) {
   idle_action_time_ = idle_action_time;
-  UpdateLabel();
+  UpdateTitle();
 }
 
 ui::ModalType IdleActionWarningDialogView::GetModalType() const {
@@ -99,7 +71,17 @@ ui::ModalType IdleActionWarningDialogView::GetModalType() const {
 }
 
 base::string16 IdleActionWarningDialogView::GetWindowTitle() const {
-  return l10n_util::GetStringUTF16(IDS_IDLE_WARNING_TITLE);
+  const base::TimeDelta time_until_idle_action =
+      std::max(idle_action_time_ - base::TimeTicks::Now(), base::TimeDelta());
+  return l10n_util::GetStringFUTF16(
+      IDS_IDLE_WARNING_TITLE,
+      ui::TimeFormat::Detailed(ui::TimeFormat::FORMAT_DURATION,
+                               ui::TimeFormat::LENGTH_LONG, 10,
+                               time_until_idle_action));
+}
+
+bool IdleActionWarningDialogView::ShouldShowCloseButton() const {
+  return false;
 }
 
 int IdleActionWarningDialogView::GetDialogButtons() const {
@@ -110,19 +92,19 @@ bool IdleActionWarningDialogView::Cancel() {
   return !update_timer_.IsRunning();
 }
 
+gfx::Size IdleActionWarningDialogView::CalculatePreferredSize() const {
+  const int default_width = views::LayoutProvider::Get()->GetDistanceMetric(
+      DISTANCE_MODAL_DIALOG_PREFERRED_WIDTH);
+  return gfx::Size(
+      default_width,
+      GetLayoutManager()->GetPreferredHeightForWidth(this, default_width));
+}
+
 IdleActionWarningDialogView::~IdleActionWarningDialogView() {
 }
 
-void IdleActionWarningDialogView::UpdateLabel() {
-  const base::TimeDelta time_until_idle_action =
-      std::max(idle_action_time_ - base::TimeTicks::Now(),
-               base::TimeDelta());
-  label_->SetText(l10n_util::GetStringFUTF16(
-      IDS_IDLE_WARNING_LOGOUT_WARNING,
-      ui::TimeFormat::Detailed(ui::TimeFormat::FORMAT_DURATION,
-                               ui::TimeFormat::LENGTH_LONG,
-                               10,
-                               time_until_idle_action)));
+void IdleActionWarningDialogView::UpdateTitle() {
+  GetWidget()->UpdateWindowTitle();
 }
 
 }  // namespace chromeos
